<resources>
<!--    <string name="app_name">YOLOv5</string>-->
    <string name="app_name">CV4Agriculture</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="segment">Segment</string>
    <string name="reload">Reload Image</string>
</resources>